Catch up with old posts

--- a/content/14-05-16.md
+++ b/content/14-05-16.md
@@ -14,3 +14,5 @@ buy a couple more plants.
 - 4 pack of Italian yellow pepper.
 
 One of the yellow peppers is a doubler.
+
+Transplanted the new plants to larger containers.
