Link small picture to larger picture

--- a/content/14-05-11.md
+++ b/content/14-05-11.md
@@ -11,4 +11,4 @@ Transplanted from planters into larger pots.  Approximately 12 inch pots.
 
 Here's a picture
 
-![Plants under grow light]({filename}/images/0511141659-400x400.jpg)
+[![Plants under grow light]({filename}/images/0511141659-400x400.jpg)]({filename}/images/0511141659.jpg)
